--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
+    "nanoid": "^5.1.6",
     "next": "15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
