--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "nanoid": "^5.1.6",
-    "next": "15.5.7",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.4.0",
